--- a/src/pages/prestadores.astro
+++ b/src/pages/prestadores.astro
@@ -13,7 +13,7 @@ const posts = await response.json();
         <Header />
 		<Background />
         
-        <div id="atencion" class="mt-32 mb-12 px-12 w-[650px] sm:w-full">
+        <div id="atencion" class="mt-32 mb-2 sm:mb-12 px-12 w-[650px] sm:w-full">
             <p class="text-xl font-semibold text-green-700">Prestadores</p>
             <hr class="border-green-600" />
         </div>
