imagenes en la nube

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,9 +12,11 @@
     </div>
 
     <div class="font-semibold justify-end mt-[15px] sm:mt-2 md:mb-2 opacity-80 gap-x-6 flex">
-        <div class="inline-flex">
-            <svg class="pt-[2px]" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-left"><path stroke="none" d="M0 0h24v24H0z"/><path d="M5 12h14M5 12l6 6M5 12l6-6"/></svg>
-            <a href="/" class="hover:text-gray-600 text-3xl md:text-lg ml-3">Volver</a>
+        <div class="">
+            <a href="/" class="hover:text-gray-600 text-3xl md:text-lg ml-3 inline-flex gap-x-2">
+                <svg class="pt-[6px] w-10 h-12 sm:w-6 sm:h-8" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-left"><path stroke="none" d="M0 0h24v24H0z"/><path d="M5 12h14M5 12l6 6M5 12l6-6"/></svg>
+                Volver
+            </a>
         </div>
 
     </div> 
