imagenes en la nube

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,7 @@
 
 
-<div class="w-[657px] sm:w-full px-6 grid grid-cols-2 place-content-between items-center  h-22 md:grid-cols-2 md:h-12 md:px-12 lg:px-24 xl:px-24 py-2 fixed z-10 bg-gradient-to-b from-green-200 to-transparent" style="backdrop-filter: blur(15px);">
-    <div class="flex justify-start md:justify-between mt-4 md:mt-0">
+<div class="w-[657px] sm:w-full px-6 grid grid-cols-2 place-content-between items-between h-22 md:grid-cols-2 md:h-12 md:px-12 lg:px-24 xl:px-24 py-2 fixed z-10 bg-gradient-to-b from-green-200 to-transparent" style="backdrop-filter: blur(15px);">
+    <div class="flex justify-between mt-[8px] md:justify-between md:mt-0">
         <a href="#">
             <img
                 class="h-10 hover:opacity-80"
@@ -14,7 +14,7 @@
     <div class="font-semibold justify-end mt-[15px] sm:mt-2 md:mb-2 opacity-80 gap-x-6 flex">
         <div class="">
             <a href="/" class="hover:text-gray-600 text-3xl md:text-lg ml-3 inline-flex gap-x-2">
-                <svg class="pt-[6px] w-10 h-12 sm:w-6 sm:h-8" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-left"><path stroke="none" d="M0 0h24v24H0z"/><path d="M5 12h14M5 12l6 6M5 12l6-6"/></svg>
+                <svg class="pt-[5px] sm:pt-[2px] w-10 h-12 sm:w-6 sm:h-8" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="icon icon-tabler icons-tabler-outline icon-tabler-arrow-left"><path stroke="none" d="M0 0h24v24H0z"/><path d="M5 12h14M5 12l6 6M5 12l6-6"/></svg>
                 Volver
             </a>
         </div>
