imagenes en la nube

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 
 <div class="w-[657px] sm:w-full px-6 grid grid-cols-2 place-content-between items-between h-22 md:grid-cols-2 md:h-12 md:px-12 lg:px-24 xl:px-24 py-2 fixed z-10 bg-gradient-to-b from-green-200 to-transparent" style="backdrop-filter: blur(15px);">
     <div class="flex justify-between mt-[8px] md:justify-between md:mt-0">
-        <a href="#">
+        <a href="/">
             <img
                 class="h-10 hover:opacity-80"
                 src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/amicos_logo.png?alt=media&token=4b0e4ed1-01b1-43b6-aff1-a0762b71b1c7"
