--- a/src/components/HeaderHome.astro
+++ b/src/components/HeaderHome.astro
@@ -20,7 +20,7 @@
             <a href="#info" class="hover:text-gray-600 text-3xl md:text-lg">Info</a>
         </div>
         <div>
-            <a href="#historia" class="hover:text-gray-600 text-3xl md:text-lg">Nosotros</a>
+            <a href="/nosotros" class="hover:text-gray-600 text-3xl md:text-lg">Nosotros</a>
         </div>
         <div>
             <a href="#redes" class="hover:text-gray-600 text-3xl md:text-lg">Redes</a>
