--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -21,7 +21,7 @@
 
     <!-- PLANES -->
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
-        <a href="#">
+        <a href="/planes">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
                 <img class="rounded-t-lg" src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.png?alt=media&token=ce98ab2f-25be-43d0-96e7-ed806b30c6a1" alt="" />
                 <div class="m-4">
@@ -34,7 +34,7 @@
     
     <!-- VADEMECUM -->
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
-        <a href="#">
+        <a href="/vademecum">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
                 <img class="rounded-t-lg" src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.png?alt=media&token=ce98ab2f-25be-43d0-96e7-ed806b30c6a1" alt="" />
                 <div class="m-4">
@@ -48,7 +48,7 @@
 
     <!-- DELEGACIONES -->
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
-        <a href="#">
+        <a href="/delegaciones">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
                 <img class="rounded-t-lg" src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.png?alt=media&token=ce98ab2f-25be-43d0-96e7-ed806b30c6a1" alt="" />
                 <div class="m-4">
@@ -62,11 +62,11 @@
     <!--- PROMOTORES|ASESORES --->
 
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
-        <a href="#">
+        <a href="/promotores">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
                 <img class="rounded-t-lg" src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.png?alt=media&token=ce98ab2f-25be-43d0-96e7-ed806b30c6a1" alt="" />
                 <div class="m-4">
-                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-green-800 ">Prestadores | Asesores</h5>
+                    <h5 class="mb-2 text-2xl font-bold tracking-tight text-green-800 ">Promotores | Asesores</h5>
                     <p class=" font-normal text-gray-700 dark:text-gray-400">Consultá con nuestros Promotores para asesorarte.</p>
                 </div>
             </div>
