--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import Gmail from "../icons/Gmail.astro"
 import Instagram from "../icons/Instagram.astro"
 ---
 
-<footer class="w-[610px] sm:w-full rounded-lg mx-auto pt-44">
+<footer class="w-[635px] sm:w-full rounded-lg pt-44">
     <div class="max-w-screen-xl px-6 w-[650px] mx-auto sm:w-full sm:mx-auto md:py-2">
         <div class="flex items-center justify-between py-2">
             
