--- a/src/pages/cuerpo.astro
+++ b/src/pages/cuerpo.astro
@@ -3,17 +3,17 @@
 
 <div class="w-[657px] sm:w-full grid grid-cols-1 place-content-around p-2 sm:py-16 bg-center" style="background-image:url('https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/image2.jpg?alt=media&token=32b69921-18fe-42e8-a324-6a32295f5e71'); background-size: cover; height:800px;">
   
-    <div class="p-4 mx-8 px-8 sm:p-4 sm:mx-24 leading-normal  rounded-2xl shadow-2xl h-full hover:shadow-xl hover:opacity-90" style="backdrop-filter: blur(30px);">
+    <div class="p-4 mx-8 px-8 sm:p-4 sm:mx-24 leading-normal lg:w-[800px] lg:mx-auto rounded-2xl shadow-2xl h-full" style="backdrop-filter: blur(30px);">
         <h6 class="mb-1 text-4xl font-bold tracking-tight text-green-700 text-pretty" style="text-shadow: rgba(216, 216, 216, 0.781) 3px 0 10px; ">Atención personalizada</h6>
         <p class="mb-3 text-xl text-gray-800" style="text-shadow: rgba(216, 216, 216, 0.781) 3px 0 10px; ">Sabemos que cada persona es única, por lo que ofrecemos un enfoque personalizado para satisfacer tus necesidades específicas. Nuestro equipo está comprometido a brindarte un servicio excepcional y a adaptarse a tus circunstancias individuales.</p>
     </div>
         
-    <div class="p-4 mx-8 px-8 sm:p-4 sm:mx-24 leading-normal rounded-2xl shadow-2xl h-full hover:shadow-xl hover:opacity-90" style="backdrop-filter: blur(30px);">
+    <div class="p-4 mx-8 px-8 sm:p-4 sm:mx-24 leading-normal lg:w-[800px] lg:mx-auto rounded-2xl shadow-2xl h-full" style="backdrop-filter: blur(30px);">
         <h6 class="mb-1 text-4xl font-bold tracking-tight text-green-700 text-pretty" style="text-shadow: rgba(216, 216, 216, 0.781) 3px 0 10px; ">Acceso a servicios de calidad</h6>
         <p class="mb-3 text-xl text-gray-800" style="text-shadow: rgba(216, 216, 216, 0.781) 3px 0 10px; ">Trabajamos con una amplia red de proveedores de salud y servicios sociales para garantizar que recibas atención de la más alta calidad. Estamos acá para asegurarnos de que recibas los servicios que necesites, cuándo y dónde los necesites.</p>
     </div>  
 
-    <div class="p-4 mx-8 px-8 sm:p-4 sm:mx-24 leading-normal rounded-2xl shadow-2xl h-full hover:shadow-xl hover:opacity-90" style="backdrop-filter: blur(30px);"> <!-- rgba(27, 27, 27, 0.781) 3px 0 10px; -->
+    <div class="p-4 mx-8 px-8 sm:p-4 sm:mx-24 leading-normal lg:w-[800px] lg:mx-auto rounded-2xl shadow-2xl h-full" style="backdrop-filter: blur(30px);"> <!-- rgba(27, 27, 27, 0.781) 3px 0 10px; -->
         <h6 class="mb-1 text-4xl font-bold tracking-tight text-green-700 text-pretty" style="text-shadow: rgba(216, 216, 216, 0.623) 3px 0 20px; ">Beneficios adicionales</h6>
         <p class="mb-3 text-xl text-gray-800" style="text-shadow: rgba(216, 216, 216, 0.781) 3px 0 15px; ">Como miembro, tendrás acceso a una variedad de beneficios adicionales, que van desde descuentos en servicios de salud y bienestar hasta programas de prevención y promoción de la salud. Queremos que te sientas valorado y recompensado por tu afiliación con nosotros.</p>
     </div>
