--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,7 @@ import Atencion from '../components/Atencion.astro';
 import App from '../components/App.astro';
 import Footer from '../components/Footer.astro';
 import Ubicacion from '../components/Ubicacion.astro';
+import Redes from './redes.astro';
 ---
 
 <Layout title="AMICOS - Asociación Mutual Intercooperativa Solidaria">
@@ -22,6 +23,7 @@ import Ubicacion from '../components/Ubicacion.astro';
 		<Cuerpo />
 		<Atencion />
 		<Ubicacion />
+		<Redes />
 		<App />
 		<Footer />
 	</main>
