--- a/src/pages/info.astro
+++ b/src/pages/info.astro
@@ -10,7 +10,7 @@
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
         <a href="/prestadores">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
-                <img class="rounded-t-lg" src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.png?alt=media&token=ce98ab2f-25be-43d0-96e7-ed806b30c6a1" alt="" />
+                <img class="rounded-t-lg" src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.avif?alt=media&token=5fd74f7f-0f5c-4dd8-b292-72af0ed23526" alt="" />
                 <div class="mt-3 mx-4">
                     <h5 class=" text-2xl font-bold tracking-tighter text-green-800 ">Prestadores</h5>
                     <p class="mb-2 font-normal text-gray-700 dark:text-gray-400">Contamos con prestaciones en las mejores Instituciones de la Provincia.</p>
@@ -23,7 +23,7 @@
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
         <a href="/planes">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
-                <img class="rounded-t-lg" src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.png?alt=media&token=ce98ab2f-25be-43d0-96e7-ed806b30c6a1" alt="" />
+                <img class="rounded-t-lg" src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.avif?alt=media&token=5fd74f7f-0f5c-4dd8-b292-72af0ed23526" alt="" />
                 <div class="m-4">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-green-800">Planes</h5>
                     <p class="font-normal text-gray-700 dark:text-gray-400">Nuestros Planes abarcan una amplia cobertura.</p>
@@ -36,7 +36,7 @@
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
         <a href="/vademecum">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
-                <img class="rounded-t-lg" src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.png?alt=media&token=ce98ab2f-25be-43d0-96e7-ed806b30c6a1" alt="" />
+                <img class="rounded-t-lg" src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.avif?alt=media&token=5fd74f7f-0f5c-4dd8-b292-72af0ed23526" alt="" />
                 <div class="m-4">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-green-800">Vademécum</h5>
                     <p class="font-normal text-gray-700 dark:text-gray-400">Cobertura en medicamentos.</p>
@@ -50,7 +50,7 @@
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
         <a href="/delegaciones">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
-                <img class="rounded-t-lg" src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.png?alt=media&token=ce98ab2f-25be-43d0-96e7-ed806b30c6a1" alt="" />
+                <img class="rounded-t-lg" src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.avif?alt=media&token=5fd74f7f-0f5c-4dd8-b292-72af0ed23526" alt="" />
                 <div class="m-4">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-green-800">Delegaciones</h5>
                     <p class=" font-normal text-gray-700 dark:text-gray-400">Estamos en varias localidades del Interior.</p>
@@ -64,7 +64,7 @@
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
         <a href="/promotores">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
-                <img class="rounded-t-lg" src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.png?alt=media&token=ce98ab2f-25be-43d0-96e7-ed806b30c6a1" alt="" />
+                <img class="rounded-t-lg" src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.avif?alt=media&token=5fd74f7f-0f5c-4dd8-b292-72af0ed23526" alt="" />
                 <div class="m-4">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-green-800 ">Promotores | Asesores</h5>
                     <p class=" font-normal text-gray-700 dark:text-gray-400">Consultá con nuestros Promotores para asesorarte.</p>
@@ -78,7 +78,7 @@
     <div style="width: 320px; height: 340px" class="p-4 mx-auto leading-normal">
         <a href="#ubicacion">
             <div class="group bg-white border border-gray-200 rounded-lg shadow-lg shadow-gray-400/60 hover:opacity-60 hover:shadow-gray-900/80">
-                <img class="rounded-t-lg " src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.png?alt=media&token=ce98ab2f-25be-43d0-96e7-ed806b30c6a1" alt="" />
+                <img class="rounded-t-lg " src="https://firebasestorage.googleapis.com/v0/b/amicosimagenes.appspot.com/o/infoImage.avif?alt=media&token=5fd74f7f-0f5c-4dd8-b292-72af0ed23526" alt="" />
                 <div class="m-4">
                     <h5 class="mb-2 text-2xl font-bold tracking-tight text-green-800">Ubicación</h5>
                     <p class="pb-6 font-normal text-gray-700 dark:text-gray-400">Dónde nos ubicamos.</p>
