imagenes en la nube

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Redes from './redes.astro';
 		<Presentacion />
 		<Contactos />
 		<Info />
-		<Cuerpo />
+		<!--<Cuerpo />-->
 		<Atencion />
 		<Ubicacion />
 		<Redes />
